@startuml

title __SAMPLE's Class Diagram__\n

  package sample {
    class ClientMain {
        + start()
        {static} + main()
    }
  }
  

  package sample {
    class Controller {
        - btnsm : Button
        - chs : CheckBox
        - btnsi : Button
        - btnso : Button
        - btnse : Button
        - btnsc : Button
        - btnrm : Button
        - btnro : Button
        - btnre : Button
        - btnrc : Button
        - listview : ListView
        ~ fileAsString : String
        ~ stegFileAsString : String
        ~ outputFile : String
        ~ outputDir : String
        ~ srcFiles : String[]
        ~ filesAsString : ArrayList<String>
        ~ selectedFile : File
        ~ stegFile : File
        ~ saveFile : File
        ~ selectedDirectory : File
        ~ selectedFiles : List<File>
        - buttonArrayList : ArrayList<Button>
        {static} ~ newMap : HashMap<String, byte[]>
        + initialize()
        + checkBox()
        + singleChooser()
        + steg()
        + multiChooser()
        + fileSaving()
        + outputDir()
        + senderExecute()
        + receiveExecute()
        - buttonsList()
        - disableButtons()
        - enableButtons()
    }
  }
  

  ClientMain -up-|> Application
  Controller -up-|> Initializable
  Controller o-- Client : client
  Controller o-- Algorithm : algorithm
  Controller o-- publicParameters : publicParameter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
